# nu-agent

./: .gitignore  .laio.yaml  AGENTS.md  Cargo.toml  README.md  flake.nix  lefthook.yml
.github/workflows/: ci.yaml  dependabot-auto-merge.yaml  release.yaml  update-flake-lock.yaml
Formula/: nu-agent.rb
data/: aarch64-darwin.json  aarch64-linux.json  x86_64-darwin.json  x86_64-linux.json
docs/: configuration.md  development.md  mcp.md  usage.md
nix/: ci.nix  dev.nix  packaging.nix
src/: closure_execution_test.rs  config.rs  config_test.rs  lib.rs  lib_test.rs  llm.rs  llm_test.rs  main.rs  plugin.rs  plugin_test.rs  session.rs  session_test.rs
src/commands/: agent.rs  agent_session_clear.rs  agent_session_clear_test.rs  agent_session_inspect.rs  agent_session_inspect_test.rs  agent_session_list.rs  agent_session_list_test.rs  agent_test.rs  mod.rs  prompt_test.rs
src/commands/agent/: logging_test.rs  mod.rs  prompt_tests.rs  tests.rs  tool_session_test.rs
src/commands/agent/session/: clear.rs  clear_tests.rs  inspect.rs  inspect_tests.rs  list.rs  list_tests.rs  mod.rs
src/commands/agent/tool_handler/: mod.rs  tests.rs
src/commands/agent/ui/: event.rs  event_contract_test.rs  factory.rs  factory_test.rs  formatter.rs  (+10 more)
src/config/: mod.rs  tests.rs
src/llm/: format.rs  mod.rs  service.rs  tests.rs  types.rs
src/llm/runtime/: cache.rs  cache_test.rs  cache_tests.rs  engine.rs  factory.rs  key.rs  key_test.rs  mod.rs  provider_enum.rs  provider_factory.rs
src/plugin/: mod.rs  tests.rs
src/providers/: mod.rs
src/providers/github_copilot/: agent.rs  agent_test.rs  backend.rs  backend_test.rs  client.rs  client_test.rs  completion.rs  error.rs  factory.rs  factory_test.rs  mod.rs  model.rs  model_tests.rs
src/session/: mod.rs
src/tools/: audit.rs  audit_tests.rs  error.rs  executor.rs  executor_tests.rs  mod.rs
src/tools/audit/: entry.rs  mod.rs  tests.rs
src/tools/closure/: conversion.rs  conversion_tests.rs  mod.rs  registry.rs  registry_tests.rs
src/tools/executor/: mod.rs
src/tools/mcp/: client.rs  client_tests.rs  config.rs  config_tests.rs  filter.rs  mod.rs  registration.rs  registration_tests.rs  runtime.rs
src/utils/: mod.rs  xdg.rs  xdg_test.rs
(+46 files in other folders)
