[package]
name = "nu_plugin_agent"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
debug = false
panic = "abort"
strip = "symbols"

[dependencies]
nu-plugin = "0.112.2"
nu-protocol = "0.112.2"
rig = { package = "rig-core", version = "0.36.0", features = ["rmcp"] }
tokio = { version = "1.52.1", features = ["full"] }
rmcp = { version = "1.5.0", features = [
  "client",
  "transport-child-process",
  "transport-streamable-http-client",
  "transport-streamable-http-client-reqwest",
  "transport-io",
] }
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.13", default-features = false, features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.27"
log = "0.4"
env_logger = "0.11"
sha2 = "0.11"
http = "1.4"

[dev-dependencies]
serial_test = "3.4.0"
